feat: structure done

--- a/css/common.css
+++ b/css/common.css
@@ -1,23 +1,29 @@
 
 
-
 /* CONTAINER WIDTH */
 
 .container{
     width: 60%;
-    margin: 0 auto;
+    margin: 20px auto;
 }
 .small-container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     width: 48%;
-    margin: 0 auto;
+    margin: 0 auto; */
     /* debug */
     background-color: aliceblue;
     height: 100px;
-
 }
 
 
 /* LIST STYLE */
 *{
     list-style: none;
+}
+
+/* STYLES GENERAL */
+h5, h2, p{
+    padding: 10px 0;
 }
