--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
-/* @import url(css\typography.css);
-@import url(css\common.css); */
+@import url(css\typography.css);
+@import url(css\common.css);
 
 /* CSS RESET */
 *{
@@ -44,12 +44,23 @@ li{
 .box{
     width: calc(100% / 3 - 20px);
     background-color: #b5ddff;
-    /* debug */
-    height: 100px;
     margin: 20px 10px;
 }
 .wide{
     width: calc(100% / 3 * 2 - 20px) ;
+}
+.text{
+    width: 50%;
+    padding: 20px;
+}
+.img-phone{
+    position: relative;
+}
+#phone{
+    position: absolute;
+    height: 268px;
+    bottom: 0px;
+    right: 75px;
 }
 /* FIRST SECTION */
 .purple{
@@ -119,6 +130,21 @@ h2{
     margin: 0 auto;
     text-align: center;
     background-color: #9792e4;
+}
+.footer{
+    background-color:#333333 ;
+    color: aliceblue;
+    width: 100%;
+    height: 300px;
+    text-align: center;
+}
+.ft{
+    margin: 20px auto;
+    width: 26%
+}
+.highlight{
+    text-decoration: underline;
+    color: #9792e4;
 }
 
 
