--- a/css/typography.css
+++ b/css/typography.css
@@ -1,3 +1,45 @@
 body{
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'PT Sans', sans-serif;
 }
+/* NAV BAR TYPO */
+
+li{
+    font-size: 18px;
+}
+.text>h3{
+    font-size: 24px;
+    color: #0084fd;
+    padding-bottom: 30px;
+    padding-top: 17px;
+}
+.text>p {
+    font-size: 18px;
+    font-weight: bold;
+    color: #5a6e7f;
+    padding-bottom: 20px;
+    line-height: 1.3;
+}
+
+
+/*** to do ***/
+/* Marketing:
+titoli 24px
+p: 18px bold
+Strategic Planning:
+titoli 34px, 24px
+p: 16px, 18px
+Testimonial:
+titolo: 48px
+sottotitolo, descrizione foto: 20px;
+Benefits:
+titolo: 48px
+numero card: 72px;
+titolo card: 24px;
+About us:
+titolo: 72px
+p: 20px;
+testo foto: 30px;
+Free:
+18px
+48px
+96px */
