--- a/css/common.css
+++ b/css/common.css
@@ -4,6 +4,7 @@
 
 .container{
     width: 60%;
+    max-width: 1140px;
     margin: 0 auto 20px auto;
 }
 .small-container{
@@ -40,6 +41,13 @@ button{
     padding: 6px 20px;
     margin-top: 20px;
     margin-bottom: 30px;
+}
+.violet{
+    color: aliceblue;
+    background-color: #9792e4;;
+    padding: 5px 40px;
+    font-size: 18px;
+
 }
 /* STYLES GENERAL */
 h5, h2, p{
