--- a/css/typography.css
+++ b/css/typography.css
@@ -6,20 +6,65 @@ body{
 li{
     font-size: 18px;
 }
-.text>h3{
+p {
+    font-size: 18px;
+    font-weight: bold;
+    color: #5a6e7f;
+    padding-bottom: 20px;
+    line-height: 2;
+}
+.box>p{
+    padding-left:10px ;
+    padding-right:10px ;
+}
+h3{
     font-size: 24px;
     color: #0084fd;
     padding-bottom: 30px;
     padding-top: 17px;
 }
-.text>p {
-    font-size: 18px;
-    font-weight: bold;
-    color: #5a6e7f;
-    padding-bottom: 20px;
-    line-height: 1.3;
+h4{
+    font-size: 24px;
+    font-weight: 300;
+
+}
+/* testimonial*/
+h5{
+    font-size: 20px;
+
+}
+h2{
+     font-size: 48px;
+     margin: 20px 0;
 }
 
+/* GRID TITLE */
+.benefits-title{
+    font-size: 48px;
+    color: aliceblue;
+    padding-top:50px;
+}
+/* numbers card */
+.number{
+    font-size: 72px;
+    color: #9792e4;
+}
+.s-title{
+    font-size: 24px;
+    color: #9792e4;
+    font-weight: 700;
+    padding: 20px 0;
+}
+/* about us */
+.about-us{
+    font-size:72px ;
+    color: #9792e4;
+}
+.col-bigger>p{
+    font-size: 20px;
+    line-height: 2;
+    padding: 30px 0;
+}
 
 /*** to do ***/
 /* Marketing:
