--- a/css/common.css
+++ b/css/common.css
@@ -47,7 +47,13 @@ button{
     background-color: #9792e4;;
     padding: 5px 40px;
     font-size: 18px;
-
+}
+.end{
+    padding: 25px 50px;
+    font-size: 20px;
+    color: #9792e4;
+    margin: 0 0 50px 0;
+    border-radius: 50px;
 }
 /* STYLES GENERAL */
 h5, h2, p{
